--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ out/
 # Gradle files
 .gradle/
 build/
-
+gradle/
 # Local configuration file (sdk path, etc)
 local.properties
 
@@ -38,3 +38,6 @@ captures/
 
 # Keystore files
 *.jks
+/gradlew
+/gradlew.bat
+/.idea/
