--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,6 @@ dependencies {
     compile 'com.google.code.gson:gson:2.6.1'
     compile 'com.android.support:cardview-v7:25.0.0'
     compile 'com.android.support:recyclerview-v7:25.0.0'
+    compile 'com.squareup.picasso:picasso:2.5.0'
+    compile 'com.android.support:support-v4:25.0.0'
 }
